--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.5.0"
+    "puppeteer-core": "^21.5.0",
+    "@sparticuz/chromium": "^121.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
